4장 포스트 수정

--- a/_jiyoon/04.md
+++ b/_jiyoon/04.md
@@ -46,3 +46,20 @@ DBMS의 목표는 디스크와 메모리 사이의 데이터 이동을 관리하
 
 ## Optimizations
 
+버퍼 풀의 bottleneck을 방지하기 위한 최적화 기법들이 존재한다.
+
+#### Multi Buffer Pools
+
+시스템 전체에 버퍼 풀이 하나만 있으면 모든 스레드가 래치를 얻기 위해 Contention이 발생한다. -> 따라서 버퍼 풀을 여러 개 만들어 해결한다. 페이지 ID를 해싱하여 어느 버퍼 풀로 갈지 정하거나, 데이터베이스별로 나누면 래치 경쟁을 줄일 수 있다.
+
+#### Pre-fetching
+
+쿼리 실행 계획을 보고 데이터의 순차적 접근이 예상되는 경우, 요청하지 않은 페이지도 미리 가져온다. `SELECT * FROM table` 같은 sequential scan을 할 때 처리하는 동안 다음 페이지를 미리 디스크에서 읽어오면 I/O 대기 시간을 줄일 수 있다.
+
+#### Scan Sharing
+
+쿼리 A가 테이블을 쭉 읽고 있는데 쿼리 B가 같은 테이블을 읽고자 시도하면 B는 처음부터 다시 읽지 않고 A가 읽고 있는 위치(커서)에 합류한다. A와 B가 함께 끝까지 테이블을 읽고, B는 못 읽었던 앞 부분을 나중에 읽는 방식이다. 
+
+#### Buffer Pool Bypass
+
+한 번 읽고 다시는 안 쓸 데이터(e.g., 큰 테이블의 단순 정렬, join 등)는 버퍼 풀 공간을 낭비하는 대신 쿼리 실행 메모리에 임시로 할당했다가 바로 버린다. Light Scan이라고도 한다.
