5강 포스트 수정

--- a/_jiyoon/05.md
+++ b/_jiyoon/05.md
@@ -1,3 +1,9 @@
+---
+title: 05 Database Storage II
+author: jiyoon
+layout: post
+---
+
 4강에서는 디스크에서 데이터를 가져와 메모리에 올리는 Buffer Pool을 공부했다. 5강에서는 buffer pool 최적화, Log-Structured 저장 방식을 다룬다.
 
 ## Buffer Pool Optimizations
